crates/php-parser/tests/snapshots/corpus__stmt_attributes.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "a",
          "params": [],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": [
            {
              "name": {
                "parts": [
                  "A1"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 14,
                  "end": 16
                }
              },
              "args": [],
              "span": {
                "start": 14,
                "end": 16
              }
            },
            {
              "name": {
                "parts": [
                  "A2"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 22,
                  "end": 24
                }
              },
              "args": [],
              "span": {
                "start": 22,
                "end": 26
              }
            },
            {
              "name": {
                "parts": [
                  "A3"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 32,
                  "end": 34
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Int": 0
                    },
                    "span": {
                      "start": 35,
                      "end": 36
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 35,
                    "end": 36
                  }
                }
              ],
              "span": {
                "start": 32,
                "end": 37
              }
            },
            {
              "name": {
                "parts": [
                  "A4"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 43,
                  "end": 45
                }
              },
              "args": [
                {
                  "name": "x",
                  "value": {
                    "kind": {
                      "Int": 1
                    },
                    "span": {
                      "start": 49,
                      "end": 50
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 46,
                    "end": 50
                  }
                }
              ],
              "span": {
                "start": 43,
                "end": 51
              }
            }
          ]
        }
      },
      "span": {
        "start": 55,
        "end": 71
      }
    },
    {
      "kind": {
        "Class": {
          "name": "C",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Method": {
                  "name": "m",
                  "visibility": "Public",
                  "is_static": false,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [
                    {
                      "name": "param",
                      "type_hint": null,
                      "default": null,
                      "by_ref": false,
                      "variadic": false,
                      "is_readonly": false,
                      "is_final": false,
                      "visibility": null,
                      "set_visibility": null,
                      "attributes": [
                        {
                          "name": {
                            "parts": [
                              "A7"
                            ],
                            "kind": "Unqualified",
                            "span": {
                              "start": 132,
                              "end": 134
                            }
                          },
                          "args": [],
                          "span": {
                            "start": 132,
                            "end": 134
                          }
                        }
                      ],
                      "span": {
                        "start": 130,
                        "end": 142
                      }
                    }
                  ],
                  "return_type": null,
                  "body": [],
                  "attributes": [
                    {
                      "name": {
                        "parts": [
                          "A6"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 95,
                          "end": 97
                        }
                      },
                      "args": [],
                      "span": {
                        "start": 95,
                        "end": 97
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 93,
                "end": 157
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "prop",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": null,
                  "default": null,
                  "attributes": [
                    {
                      "name": {
                        "parts": [
                          "A14"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 159,
                          "end": 162
                        }
                      },
                      "args": [],
                      "span": {
                        "start": 159,
                        "end": 162
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 157,
                "end": 180
              }
            }
          ],
          "attributes": [
            {
              "name": {
                "parts": [
                  "A5"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 75,
                  "end": 77
                }
              },
              "args": [],
              "span": {
                "start": 75,
                "end": 77
              }
            }
          ]
        }
      },
      "span": {
        "start": 79,
        "end": 183
      }
    },
    {
      "kind": {
        "Interface": {
          "name": "I",
          "extends": [],
          "members": [],
          "attributes": [
            {
              "name": {
                "parts": [
                  "A8"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 187,
                  "end": 189
                }
              },
              "args": [],
              "span": {
                "start": 187,
                "end": 189
              }
            }
          ]
        }
      },
      "span": {
        "start": 191,
        "end": 205
      }
    },
    {
      "kind": {
        "Trait": {
          "name": "T",
          "members": [],
          "attributes": [
            {
              "name": {
                "parts": [
                  "A9"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 208,
                  "end": 210
                }
              },
              "args": [],
              "span": {
                "start": 208,
                "end": 210
              }
            }
          ]
        }
      },
      "span": {
        "start": 212,
        "end": 222
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 224,
                  "end": 226
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Closure": {
                    "is_static": false,
                    "by_ref": false,
                    "params": [],
                    "use_vars": [],
                    "return_type": null,
                    "body": [],
                    "attributes": [
                      {
                        "name": {
                          "parts": [
                            "A10"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 231,
                            "end": 234
                          }
                        },
                        "args": [],
                        "span": {
                          "start": 231,
                          "end": 234
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 229,
                  "end": 249
                }
              }
            }
          },
          "span": {
            "start": 224,
            "end": 249
          }
        }
      },
      "span": {
        "start": 224,
        "end": 251
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "y"
                },
                "span": {
                  "start": 251,
                  "end": 253
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "ArrowFunction": {
                    "is_static": false,
                    "by_ref": false,
                    "params": [],
                    "return_type": null,
                    "body": {
                      "kind": {
                        "Int": 0
                      },
                      "span": {
                        "start": 271,
                        "end": 272
                      }
                    },
                    "attributes": [
                      {
                        "name": {
                          "parts": [
                            "A11"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 258,
                            "end": 261
                          }
                        },
                        "args": [],
                        "span": {
                          "start": 258,
                          "end": 261
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 256,
                  "end": 272
                }
              }
            }
          },
          "span": {
            "start": 251,
            "end": 272
          }
        }
      },
      "span": {
        "start": 251,
        "end": 274
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 274,
                  "end": 276
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Closure": {
                    "is_static": true,
                    "by_ref": false,
                    "params": [],
                    "use_vars": [],
                    "return_type": null,
                    "body": [],
                    "attributes": [
                      {
                        "name": {
                          "parts": [
                            "A12"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 281,
                            "end": 284
                          }
                        },
                        "args": [],
                        "span": {
                          "start": 281,
                          "end": 284
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 279,
                  "end": 306
                }
              }
            }
          },
          "span": {
            "start": 274,
            "end": 306
          }
        }
      },
      "span": {
        "start": 274,
        "end": 308
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 308,
                  "end": 310
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "ArrowFunction": {
                    "is_static": true,
                    "by_ref": false,
                    "params": [],
                    "return_type": null,
                    "body": {
                      "kind": {
                        "Int": 0
                      },
                      "span": {
                        "start": 335,
                        "end": 336
                      }
                    },
                    "attributes": [
                      {
                        "name": {
                          "parts": [
                            "A13"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 315,
                            "end": 318
                          }
                        },
                        "args": [],
                        "span": {
                          "start": 315,
                          "end": 318
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 313,
                  "end": 336
                }
              }
            }
          },
          "span": {
            "start": 308,
            "end": 336
          }
        }
      },
      "span": {
        "start": 308,
        "end": 337
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 337
  }
}
